--- a/Hidden.html
+++ b/Hidden.html
@@ -9,31 +9,33 @@
 <h2>Getting input</h2>
 
 <form>
-    <label for="form1_age">What is your age </label>
-    <input type ="number" id="form1_age" name="form1_age" min=10 max=50 step=2 value=30> <br>
+    <label for="Secret">Enter the secret word </label>
+    <input type ="password" id="Secret" name="secret" min=10 max=50 step=2 value=30> <br>
 
-    <label for="form1_nick">What is your nickname </label>
-    <input type ="text" id="form1_nick" name="form1_nick" autofocus> <br>
+    <label for="guess">Enter the guess word</label>
+    <input type ="text" id="guess" name="guess" autofocus> <br>
 
-    <input type="button" onclick="resolveForm()" value="Get values from form">
+    <input type="button" onclick="processGuess()" value="Check the guess">
 </form>
 
 
 <p id="result">This text will be replaced </p>
 
 <script> 
+var correct=0;
+var wrong=0;
 
-function resolveForm (){
+function processGuess(){
     console.log("Getting form values")
-    age = document.getElementById("form1_age").value
-    nick = document.getElementById("form1_nick").value
-    confirmed = confirm("Are these the values? "+age+" and "+nick)
+    Secret = document.getElementById("Secret").value
+    guess = document.getElementById("guess").value
+    confirmed = confirm("Are these the values? "+Secret+" and "+guess)
     
     out = document.getElementById("result")
-    if(confirmed){
-        out.innerHTML = "Values were confirmed"
+    if(Secret==guess){
+        out.innerHTML = "Congratulations"
     } else {
-        out.innerHTML = "Values were not confirmed"
+        out.innerHTML = "Sorry"
     }
 }
 </script>
