--- a/Hidden.html
+++ b/Hidden.html
@@ -9,8 +9,8 @@
 <h2>Getting input</h2>
 
 <form>
-    <label for="Secret">Enter the secret word </label>
-    <input type ="password" id="Secret" name="secret" min=10 max=50 step=2 value=30> <br>
+    <label for="secret">Enter the secret word </label>
+    <input type ="password" id="secret" name="secret" min=10 max=50 step=2 value="Secret"> <br>
 
     <label for="guess">Enter the guess word</label>
     <input type ="text" id="guess" name="guess" autofocus> <br>
@@ -27,18 +27,47 @@ var wrong=0;
 
 function processGuess(){
     console.log("Getting form values")
-    Secret = document.getElementById("Secret").value
+    Secret = document.getElementById("secret").value
     guess = document.getElementById("guess").value
-    confirmed = confirm("Are these the values? "+Secret+" and "+guess)
-    
     out = document.getElementById("result")
     if(Secret==guess){
-        out.innerHTML = "Congratulations"
+        correct=correct+1;
+        alert("Congratulations");
+        out.innerHTML = "correct" +correct+" wrong" + wrong
     } else {
-        out.innerHTML = "Sorry"
+        wrong=wrong+1;
+        alert("Sorry");
+        out.innerHTML = "correct" +correct+" wrong" + wrong
     }
 }
 </script>
 
+<div class="container">
+    <img id="plants" src="hackberry.jpg" width="200" height="200" onclick="rotateImage()">
+</div>
+<script>
+    var currentImage=0;
+    function rotateImage()
+    {
+switch(currentImage){
+    case 0:
+        currentImage=currentImage+1;
+        document.getElementById("plants").src= "hackberry.jpg"
+        break;
+        case 1:
+        currentImage=currentImage+1;
+        document.getElementById("plants").src= "Mahonia.png"
+        break;
+        case 2:
+        currentImage=currentImage+1;
+        document.getElementById("plants").src= "Talinum.jpg"
+        break;
+        default:
+            currentImage=0
+            document.getElementById("plants").src= "hackberry.jpg"
+
+}
+    }
+</script>
 </body>
 </html> 
